Revert "[tester] test and docs"
This reverts commit 84d8b65c28886ae6958d2c50479efac2d8e5e60b.

Signed-off-by: Raymond Augé <raymond.auge@liferay.com>